--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
             <h2>Demo de Charla con el ChatBot</h2>
             <p>Para que puedas ver lo que el ChatBot es capaz de hacer, te dejamos un enlace a una charla de ejemplo con el ChatBot de demostración. Esta demo muestra cómo el ChatBot interactúa con los usuarios, responde preguntas y procesa información de los documentos cargados.</p>
             <p><strong>Nota:</strong> Este es solo un ejemplo del ChatBot en su fase de demostración. El ChatBot de SINERSA funcionará de manera similar, pero será implementado en un entorno local con acceso exclusivo a los documentos que subas.</p>
-            <a href="https://partyrock.aws/u/practicanteai/5_3_Xq3tr/Sinersa-ChatBot/snapshot/sjbq3HWTF" target="_blank" class="button-link">Ver la Demo del ChatBot</a>
+            <a href="https://liberal-blatantly-cricket.ngrok-free.app/s/d6da92e0-be0b-4695-9762-9043655e2182" target="_blank" class="button-link">Ver la Demo del ChatBot</a>
         </div>
 
         <!-- Sección 7: Demo Interactiva del ChatBot -->
         <div class="section" id="formulario">
             <h2>¡Prueba el ChatBot en acción!</h2>
-            <p>Haz clic en el siguiente enlace para probar una versión de prueba del ChatBot en Amazon Bedrock Playground:</p>
-            <a href="https://partyrock.aws/u/practicanteai/5_3_Xq3tr/Sinersa-ChatBot" target="_blank" class="button-link">Acceder a la Demo del ChatBot</a>
+            <p>Haz clic en el siguiente enlace para probar una versión de prueba del ChatBot:</p>
+            <a href="https://liberal-blatantly-cricket.ngrok-free.app" target="_blank" class="button-link">Acceder a la Demo del ChatBot</a>
             <p><strong>Nota:</strong> Esta es solo una versión de prueba. El ChatBot solo podrá interactuar con los documentos que subas durante la prueba.</p>
         </div>
     </div>
