--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Barra de navegación -->
     <nav class="navbar" aria-label="Main Navigation">
         <div class="nav-container">
-            <h1>ChatBot_Sinersa</h1>
+            <h1>Chatbot Sinersa_IA</h1>
             <button class="menu-toggle" aria-label="Toggle Menu">
                 <i class="fas fa-bars"></i>
             </button>
